Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigPlusWithBadChars.calc
a .0%E+23 b 1.%E+25 c 2.3%E+31 d 34.5%E+45 e 6.78%E+73 f 99.99%E+56 g 3%E+93 h 76%E+45
.0%E+23
1.%E+25
2.3%E+31
34.5%E+45
6.78%E+73
99.99%E+56
3%E+93
76%E+45
a .0%E+2 b 1.%E+2 c 2.3%E+3 d 34.5%E+4 e 6.78%E+7 f 99.99%E+5 g 3%E+9 h 76%E+4
.0%E+2
1.%E+2
2.3%E+3
34.5%E+4
6.78%E+7
99.99%E+5
3%E+9
76%E+4
a .0E%+23 b 1.E%+25 c 2.3E%+31 d 34.5E%+45 e 6.78E%+73 f 99.99E%+56 g 3E%+93 h 76E%+45
.0E%+23
1.E%+25
2.3E%+31
34.5E%+45
6.78E%+73
99.99E%+56
3E%+93
76E%+45
a .0E%+2 b 1.E%+2 c 2.3E%+3 d 34.5E%+4 e 6.78E%+7 f 99.99E%+5 g 3E%+9 h 76E%+4
.0E%+2
1.E%+2
2.3E%+3
34.5E%+4
6.78E%+7
99.99E%+5
3E%+9
76E%+4
a .0E+%23 b 1.E+%25 c 2.3E+%31 d 34.5E+%45 e 6.78E+%73 f 99.99E+%56 g 3E+%93 h 76E+%45
.0E+%23
1.E+%25
2.3E+%31
34.5E+%45
6.78E+%73
99.99E+%56
3E+%93
76E+%45
a .0E+%2 b 1.E+%2 c 2.3E+%3 d 34.5E+%4 e 6.78E+%7 f 99.99E+%5 g 3E+%9 h 76E+%4
.0E+%2
1.E+%2
2.3E+%3
34.5E+%4
6.78E+%7
99.99E+%5
3E+%9
76E+%4
a .0E+2%3 b 1.E+2%5 c 2.3E+3%1 d 34.5E+4%5 e 6.78E+7%3 f 99.99E+5%6 g 3E+9%3 h 76E+4%5
.0E+2%3
1.E+2%5
2.3E+3%1
34.5E+4%5
6.78E+7%3
99.99E+5%6
3E+9%3
76E+4%5
a .0E+2% b 1.E+2% c 2.3E+3% d 34.5E+4% e 6.78E+7% f 99.99E+5% g 3E+9% h 76E+4%
.0E+2%
1.E+2%
2.3E+3%
34.5E+4%
6.78E+7%
99.99E+5%
3E+9%
76E+4%
a .0E+23% b 1.E+25% c 2.3E+31% d 34.5E+45% e 6.78E+73% f 99.99E+56% g 3E+93% h 76E+45%
.0E+23%
1.E+25%
2.3E+31%
34.5E+45%
6.78E+73%
99.99E+56%
3E+93%
76E+45%
